app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

@import 'bulma';
@import 'font-awesome';

body.modal-open {
  overflow: hidden;
  position: fixed;
}

.hidden {
  visibility: hidden;
  opacity: 0;
  transition: visibility 0s 0.2s, opacity 0.2s linear;
}

.has-pointer {
  cursor: pointer;
}

.has-no-bottom-padding {
  padding-bottom: 0;
}

.has-bottom-padding {
  padding-bottom: 1.5rem;
}

.main-section {
  padding: 2rem 1.5rem;
}

.notification {
  &.flash-notification {
    border-radius: 0;
  }
}

.tabs.topnav-tabs {
  margin-bottom: 0;
}

.items-list {
  margin-bottom: 1.5rem;
}

.item-box {
  margin-bottom: 1rem !important;
  padding: 0;
  position: relative;

  img {
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
  }

  &:hover, &.is-focused {
    box-shadow: 0 2px 3px rgba(146, 178, 235, 0.8), 0 0 0 1px rgba(146, 178, 235, 0.8);

    .level > .item-actions, .show-on-hover {
      visibility: visible;
      opacity: 1;
      transition: opacity 0.2s linear;
    }
  }

  .item-name {
    a {
      font-size: 1.15rem;
    }
  }

  @media (max-width: 500px) {
    .item-name {
      width: 180px;
      justify-content: flex-start;

      a {
        font-size: 0.9rem;
      }
    }

    .item-year {
      margin-left: auto;
    }
  }

  @media (max-width: 360px) {
    .item-name {
      width: 120px;
      justify-content: flex-start;
    }
  }
}

.image {
  .scraper-result-image {
    width: 64px;
    height: 64px;
    object-fit: cover;
  }
}

.level-left,
.level-right {
  &.is-mobile {
    display: flex;
    margin-top: 0;
    &>.level-item {
      &:not(:last-child) {
        margin-bottom: 0;
      }
      &:not(.is-narrow) {
        flex-grow: 1;
      }
    }
  }
}

.modal {
  .modal-card {
    max-height: 85vh;
  }
}

.item-details-modal {
  .modal-card-head {
    min-height: 63px;
    .edit-item-pencil {
      margin-left: auto;
      cursor: pointer;
    }

    .external-item-links {
      a {
        margin-right: 20px;
      }
    }

    &:hover {
      .external-item-links, .edit-item-pencil {
        visibility: visible;
        opacity: 1;
        transition: opacity 0.2s linear;
      }
    }

    .modal-card-title {
      max-width: 75vw;
    }
  }

  .modal-card-head, .modal-card-foot {
    padding-top: 15px;
    padding-bottom: 15px;
  }

  .image-content {
    &:hover .item-rating {
      visibility: visible;
      opacity: 1;
      transition: opacity 0.2s linear;
    }
  }

  .item-details-modal-background {
    background-color: rgba(10, 10, 10, 0.86);
  }

  .tags {
    margin-bottom: 1rem;
  }

  .modal-card {
    width: 95vw;
    max-width: 1000px;

    @media (max-width: 500px) {
      height: 100vh !important;
      max-height: 100vh !important;
      width: 100vw;

      .modal-card-head, .modal-card-foot {
        border-radius: 0px;
      }
    }
  }

  .modal-card-body {
    display: grid;
    grid-template-columns: 25% auto;
    grid-gap: 1em;
    grid-template-areas: "image fields";

    .item-description {
      white-space: pre-wrap;
    }

    @media (max-width: 500px) {
      grid-template-columns: 1fr;
      grid-template-areas:
        "image"
        "fields";
    }

    @media (min-width: 501px) {
      .item-description {
        max-height: 40vh;
        overflow-y: scroll;
      }
    }
  }
}

